# amaterus_admin_gradio

./: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  schema.graphql  template.env
.github/workflows/: build-docker.yml
amaterus_admin_gradio/: __main__.py
amaterus_admin_gradio/graphql_client/: __init__.py  base_client.py  base_model.py  client.py  create_game.py  create_program.py  create_program_niconico_video.py  create_program_person.py  create_program_twitter_announcement.py  create_program_twitter_announcement_without_image.py  create_program_youtube_live_live_archive.py  create_program_youtube_video_live_archive.py  create_twitter_tweet.py  create_twitter_tweet_image.py  enums.py  exceptions.py  get_create_program_initial_data.py  get_create_program_niconico_video_initial_data.py  get_create_program_person_initial_data.py  get_create_program_twitter_announcement_initial_data.py  get_create_program_youtube_live_live_archive_initial_data.py  get_create_program_youtube_video_live_archive_initial_data.py  get_program_project_list_by_project_id.py  get_twitter_account_by_screen_name.py  input_types.py
amaterus_admin_gradio/tab/: __init__.py  add_program_live_archive_tab.py  add_program_niconico_video_tab.py  add_program_tab.py  add_program_twitter_announcement_tab.py  add_program_youtube_live_live_archive_tab.py  add_program_youtube_video_live_archive_tab.py  create_game_tab.py  create_program_niconico_video_tab.py  create_program_person_tab.py  create_program_tab.py  create_program_twitter_announcement_tab.py  (+2 more)
dev_scripts/: fetch_hasura_graphql_schema.py
queries/: create_game.graphql  create_program.graphql  create_program_niconico_video.graphql  create_program_person.graphql  create_program_twitter_announcement.graphql  create_program_twitter_announcement_without_image.graphql  create_program_youtube_live_live_archive.graphql  create_program_youtube_video_live_archive.graphql  create_twitter_tweet.graphql  create_twitter_tweet_image.graphql  get_create_program_niconico_video_tab_initial_data.graphql  get_create_program_person_tab_initial_data.graphql  get_create_program_tab_initial_data.graphql  get_create_program_twitter_announcement_tab_initial_data.graphql  get_create_program_youtube_live_live_archive_tab_initial_data.graphql  get_create_program_youtube_video_live_archive_tab_initial_data.graphql  get_program_project_list_by_project_id.graphql  get_twitter_account_by_screen_name.graphql
scripts/: add_program_live_archive.py  add_program_niconico_video.py  add_youtube_live.py  main.py
