[tool.pysen]
version = "0.11"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py311"
mypy_ignore_packages = ["amaterus_admin_gradio.graphql_client.*"]

  [[tool.pysen.lint.mypy_targets]]
    paths = ["."]

[tool.pysen.lint.source]
  excludes = ["amaterus_admin_gradio/graphql_client/"]

[tool.ariadne-codegen]
queries_path = "queries/"
schema_path  = "schema.graphql"
target_package_path = "amaterus_admin_gradio/"
async_client = false

[tool.poetry]
name = "amaterus-admin-gradio"
version = "0.5.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
gradio = "^4.38.1"
requests = "^2.32.3"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"
ariadne-codegen = {extras = ["subscriptions"], version = "^0.13.0"}


[tool.poetry.group.dev.dependencies]
pysen = "^0.11.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
flake8-bugbear = "^24.4.26"
mypy = "^1.10.1"
pytest = "^8.2.2"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
